feat:complete the calendar module and booking view: Sandeep

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
+    "@mui/x-date-pickers": "^6.18.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
     "install": "^0.13.0",
     "mobiscroll-react": "^4.0.0",
     "prop-types": "^15.8.1",
@@ -27,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-simple-offcanvas": "^1.0.9",
+    "react-spring": "^9.7.3",
     "react-step-progress": "^1.0.3",
     "react-stepper-horizontal": "^1.0.11",
     "styled-components": "^6.1.0",
