--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-simple-offcanvas": "^1.0.9",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
     "react-step-progress": "^1.0.3",
     "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
