--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "mobiscroll-react": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
