--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-simple-offcanvas": "^1.0.9",
     "react-slick": "^0.29.0",
